--- a/public/app/index.html
+++ b/public/app/index.html
@@ -12,8 +12,7 @@
 
     <ul class="menu">
       <li><a href="#/login">login</a></li>
-      <li><a href="#/view1">view1</a></li>
-      <li><a href="#/view2">view2</a></li>
+      <li><a href="#/showLuckyColor">show lucky color (login required)</a></li>
     </ul>
 
     <div ng-view></div>
@@ -28,6 +27,7 @@
   </div><!--/.fluid-container-->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="/lib/jquery.cookie.js"></script>  
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
   <script src="/javascripts/app.js"></script>
   <script src="/javascripts/controllers.js"></script>
