--- a/public/app/index.html
+++ b/public/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>Google Phone Gallery</title>
+  <title>Play 2.0 Proof-of-Concept</title>
   <link href="/stylesheets/app.css" rel="stylesheet">
   <link href="/stylesheets/bootstrap.css" rel="stylesheet">
 </head>
